# hamclock-next

./: .gitignore  API.md  CLAUDE.md  CMakeLists.txt  CODEOWNERS  MCP_GUIDE.md  README.md  TICKETS.md  TROUBLESHOOTING.md  USAGE.md
.github/workflows/: build-macos.yml  build-opi.yml  build-rpi.yml  build-windows.yml
.mcp/: README.md  feature_map.json  hamclock-next-mcp.json  package-lock.json  package.json
.mcp/src/: feature-map.ts  index.ts  indexer.ts  parity.ts  scaffold.ts  verification.ts
original-analysis/: DATA_SOURCES.md  dx_cluster_comparison.md  hamclock_fonts.md  hamclock_layout.md  hamclock_widgets.md
scripts/: build-macos.sh  build-opi-bookworm-fb0.sh  build-opi-trixie-fb0.sh  build-rpi-bullseye-fb0.sh  update_cities.py  update_prefixes.py
src/: main.cpp
src/core/: Astronomy.h  AuroraHistoryStore.h  CallbookData.h  CitiesData.h  CitiesManager.cpp  CitiesManager.h  ConfigManager.cpp  ConfigManager.h  DXClusterData.cpp  DXClusterData.h  DatabaseManager.cpp  DatabaseManager.h  DstData.h  HamClockState.h  LiveSpotData.h  Logger.cpp  Logger.h  MoonData.h  PrefixData.h  PrefixManager.cpp  PrefixManager.h  SantaData.h  SatelliteManager.cpp  UIRegistry.h  WatchlistHitStore.h  WatchlistStore.h  WidgetType.h
src/network/: NetworkManager.cpp  NetworkManager.h  WebServer.cpp  WebServer.h
src/services/: ActivityProvider.h  AuroraProvider.cpp  CallbookProvider.cpp  CallbookProvider.h  DRAPProvider.cpp  DXClusterProvider.cpp  DXClusterProvider.h  DstProvider.cpp  DstProvider.h  LiveSpotProvider.cpp  LiveSpotProvider.h  MoonProvider.cpp  MoonProvider.h  NOAAProvider.cpp  NOAAProvider.h  RSSProvider.cpp  SantaProvider.cpp  SantaProvider.h
src/ui/: ActivityPanels.cpp  ActivityPanels.h  AuroraGraphPanel.cpp  AuroraGraphPanel.h  BeaconPanel.cpp  CallbookPanel.cpp  CallbookPanel.h  DRAPPanel.cpp  DRAPPanel.h  DXClusterPanel.cpp  DXClusterPanel.h  DXPanel.cpp  DXPanel.h  DXSatPane.cpp  DXSatPane.h  DstPanel.cpp  DstPanel.h  EMEToolPanel.cpp  EMEToolPanel.h  EmbeddedIcons.h  FontCatalog.h  FontManager.h  HistoryPanel.cpp  HistoryPanel.h  ListPanel.cpp  ListPanel.h  LiveSpotPanel.cpp  LiveSpotPanel.h  LocalPanel.cpp  LocalPanel.h  MapWidget.cpp  MapWidget.h  MoonPanel.cpp  MoonPanel.h  PaneContainer.cpp  PaneContainer.h  RenderUtils.cpp  RenderUtils.h  SantaPanel.cpp  SantaPanel.h  (+13 more)
